--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,12 +8,16 @@
 
     {{ form_start(registrationForm, {'attr': {'class': 'form'}}) }}
     <div class="w-100 d-flex justify-content-center"><h1 class="mb-3">Register</h1></div>
+        {{ form_row(registrationForm.prenom) }}
+        {{ form_row(registrationForm.nom) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
         {{ form_row(registrationForm.agreeTerms, {'attr': {'class': 'agree'}}) }}
-
+        <a class="mt-4 btn btn-outline-info" href="{{ path('app_login') }}">
+            You already have an account
+        </a>
         <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
