--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcomeyo!{% endblock %}</title>
+        <title>{% block title %}Header{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -15,7 +15,85 @@
         {% endblock %}
     </head>
     <body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="{{ path('app_index') }}"><img src="{{ asset('img/logo_wth.png') }}" alt="logo"></a>
+            </div>
+            <ul class="nav-links">
+                {% if app.user and app.user.roles[0] == "ROLE_ADMIN" %}
+                <li><a href="http://localhost:3000" class="highlight-link rougeAdmin">Dashboard<img src="{{ asset('img/arrow.png') }}" class="svgLogo2"/></a></li>
+                {% endif %}
+                <li><a href="#" class="highlight-link">Articles</a>
+                    <ul class="dropdown">
+                        <li>
+                            <a href="#" class="dropdown-link">Tête</a>
+                            <ul class="sub-dropdown">
+                                <li>
+                                    <a href="#" class="sub-dropdown-link">Yeux</a>
+                                    <ul class="sub-sub-dropdown">
+                                        <li><a href="#">Iris</a></li>
+                                        <li><a href="#">Autre catégorie</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#" class="sub-dropdown-link">Nez</a></li>
+                                <li><a href="#" class="sub-dropdown-link">Bouche</a></li>
+                                <li><a href="#" class="sub-dropdown-link">Oreille</a></li>
+                            </ul>
+                        </li>
+
+                        <li><a href="#">Haut du corps</a></li>
+                        <li><a href="#">Bas du corps</a></li>
+                        <li><a href="#">Jambe</a></li>
+                    </ul>
+                </li>
+                <li><a href="{{ path('app_contact') }}" class="highlight-link">Contact</a></li>
+                <li><a href="#" class="highlight-link">Mentions Légales</a></li>
+            </ul>
+
+            {% if app.user %}
+                <ul class="nav-links">
+                    <li><a href="#" class="highlight-link">{{ app.user.prenom }} {{ app.user.nom }} <img class="imgLogo" src="{{ app.user.avatar }}" alt="User Avatar" /></a>
+                        <ul class="dropdown">
+                            <li>
+                                <a href="{{ path('app_logout') }}"><img src="{{ asset('img/logout.svg') }}" class="svgLogo2" alt="logo logout"/> Logout</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                {% else %}
+                <div class="buttons">
+                    <a href="{{ path('app_login') }}" class="btn2 login">Sign In</a>
+                    <a href="{{ path('app_register') }}" class="btn2 register">Create Account</a>
+                </div>
+            {% endif %}
+        </nav>
+        <div class="line"></div>
+    </header>
         {% block body %}{% endblock %}
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var dropdownLinks = document.querySelectorAll('.dropdown-link');
+            var subDropdownLinks = document.querySelectorAll('.sub-dropdown-link');
+
+            dropdownLinks.forEach(function(link) {
+                link.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    var subMenu = this.nextElementSibling;
+                    subMenu.classList.toggle('show-submenu');
+                });
+            });
+
+            subDropdownLinks.forEach(function(link) {
+                link.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    var subSubMenu = this.nextElementSibling;
+                    subSubMenu.classList.toggle('show-sub-submenu');
+                });
+            });
+        });
+    </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
