--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,11 +8,11 @@
 
     {{ form_start(registrationForm, {'attr': {'class': 'form'}}) }}
     <div class="w-100 d-flex justify-content-center"><h1 class="mb-3">Register</h1></div>
-        {{ form_row(registrationForm.prenom) }}
-        {{ form_row(registrationForm.nom) }}
-        {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.prenom, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(registrationForm.nom, {'attr': {'class': 'form-control'}}) }}
+        {{ form_row(registrationForm.email, {'attr': {'class': 'form-control'}}) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Password',
         }) }}
         {{ form_row(registrationForm.agreeTerms, {'attr': {'class': 'agree'}}) }}
         <a class="mt-4 btn btn-outline-info" href="{{ path('app_login') }}">
