--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,7 @@
     font-weight: 500;
     font-style: normal;
 }
+
 body {
     margin: 0;
     padding: 0;
@@ -61,12 +62,13 @@ body {
     width: 100%;
     padding: 10px;
     margin-top: 15px;
-    background: linear-gradient(to right,#3CB5BA, #4368AE);
+    background: linear-gradient(to right, #3CB5BA, #4368AE);
     color: #fff;
     border: none;
     border-radius: 3px;
     cursor: pointer;
 }
+
 .agree {
     margin-left: 10px !important;
 }
@@ -78,6 +80,7 @@ body {
     background-color: #ffffff;
     padding: 7px 10px;
 }
+
 .logo img {
     color: white;
     text-decoration: none;
@@ -85,31 +88,37 @@ body {
     height: auto;
     transition: transform 1s;
 }
+
 .logo img:hover {
     transform: scale(1.1);
     cursor: pointer;
 }
+
 .nav-links {
     list-style-type: none;
-    margin:0;
+    margin: 0;
 }
+
 .nav-links li {
     display: inline-block;
     margin-left: 20px;
     position: relative;
 }
+
 .nav-links li a {
     color: rgb(0, 0, 0);
     text-decoration: none;
     font-size: 16px;
 }
+
 .dropdown {
     display: none;
     position: absolute;
     background-color: white;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 20px 12px 0;
 }
+
 .dropdown li a {
     color: black;
     display: block;
@@ -120,9 +129,11 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 .highlight-link:hover {
     color: #4368AE;
 }
+
 .highlight-link::after {
     content: '';
     display: block;
@@ -135,6 +146,7 @@ body {
     transform: translateX(-50%);
     transition: width 0.3s ease;
 }
+
 .highlight-link:hover::after,
 .highlight-link:focus::after {
     width: 100%;
@@ -144,6 +156,7 @@ body {
 .dropdown li a:focus {
     color: #598f91;
 }
+
 .dropdown li a:hover .svgLogo2 {
     filter: brightness(1.5) sepia(1) hue-rotate(180deg) saturate(5) brightness(0.5);
 }
@@ -173,6 +186,7 @@ body {
 .buttons {
     display: flex;
 }
+
 .btn2 {
     padding: 8px 20px;
     margin-left: 10px;
@@ -183,23 +197,29 @@ body {
     border-radius: 30px;
     transition: background-color 0.3s;
 }
+
 .btn2:hover {
     background-color: #555;
 }
+
 .login {
     background-color: #bdbdbd;
     color: #333;
 }
+
 .login:hover {
     background-color: rgb(214, 214, 214);
 }
+
 .register {
     background-color: #333;
     color: #ffffff;
 }
+
 .register:hover {
     background-color: rgb(73, 77, 74)
 }
+
 @keyframes slide {
     0% {
         background-position: 0% 50%;
@@ -208,12 +228,38 @@ body {
         background-position: 100% 50%;
     }
 }
+
 .bloc-item {
     width: fit-content;
+    border-bottom: solid #001b44 1px;
 }
+
+h2.titleArticles {
+    background-image: linear-gradient(
+            to right,
+            #e36414,
+            #e36414 50%,
+            #000814 50%
+    );
+    background-size: 200% 100%;
+    background-position: 100%;
+    display: inline-block;
+    padding: 5px 0;
+    position: relative;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: all 0.3s ease-in-out;
+}
+
+h2.titleArticles:hover {
+    background-position: 0;
+    cursor: pointer;
+}
+
 .bloc-item > img {
     width: 200px;
 }
+
 .line {
     width: 100%;
     height: 15px;
@@ -258,18 +304,20 @@ body {
 .sub-sub-dropdown li a:focus {
     color: #95eef1;
 }
+
 .imgLogo {
     width: 40px;
     border-radius: 50px;
 }
+
 .svgLogo2 {
     width: 20px;
 }
+
 .rougeAdmin {
     color: #e82323 !important;
     font-weight: bold;
 }
-
 
 
 /* FOMULAIRE DE CONTACT */
@@ -280,9 +328,11 @@ body {
     flex-direction: column;
     align-items: center;
 }
-#contact-h1{
+
+#contact-h1 {
     font-weight: bold;
 }
+
 .contact-form form {
     display: flex;
     flex-direction: column;
@@ -303,7 +353,7 @@ body {
 
 .contact-form button {
     padding: 10px;
-    background: linear-gradient(to right,#3CB5BA, #4368AE);
+    background: linear-gradient(to right, #3CB5BA, #4368AE);
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -319,13 +369,34 @@ body {
 .article-list {
     display: flex;
 }
+
 .article-item {
     width: fit-content;
     margin: 30px 0 0 30px;
 }
+
 .bloc-list {
     padding: 15px;
-    border-radius: 5px;
-    border: solid #001b44 1px;
     width: fit-content;
+}
+/* Pour la page d'un article unique */
+.imgArticle {
+    max-width: 40vw;
+}
+.containerArticle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.affichageArticle {
+    margin: 20px 20px 4px 20px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 3px;
+    border: solid 1px #00000040;
+}
+.paragraphArticle {
+    margin-top: 20px;
 }
